# Islamic-Prayer-Timings

./: .clang-format  .gitignore  CMakeLists.txt  IPT  README.md  calc_next.cpp  location.conf-example  main.cpp  next  next.txt  prayer_timer.c  prayer_timer.patch  response.json  set_next.sh  table.txt  timings.json  update_rem.sh  update_timings.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  clang-format-check.yml
include/: prayer_timings.h  utils.h  waybar.h
src/: main.cpp  prayerTimings.cpp  utils.cpp  waybar.cpp
